Adding a warining massage for Ceaser

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<span>
 					<input id='massage' class=input>
 				</span>
-
+				</div>
 				<!--Key-->
 				<div class='input area' id='keyPlace'>
 					<span class='keyText'>
